fix scrolling issue on firefox

--- a/web/src/05_styles/pages/game/Game.scss
+++ b/web/src/05_styles/pages/game/Game.scss
@@ -9,6 +9,7 @@
     flex: 3;
     display: flex;
     flex-direction: row;
+    min-height: 0;
   }
 
   .game-view {
